1998-03-09  Laurent Pautet  <pautet@scapin.enst.fr>

        * xe_utils.adb: Use Scan_Make_Arg from Make unit. Re-organize
        Initialize to use a copy of Make.Initialize which includes
        -A<GARLIC> flag.

        * xe_build.adb: Re-organize code because of changes above.

1998-03-08  Laurent Pautet  <pautet@scapin.enst.fr>

	* config.sdefault: Change output when argument is pathtolib. This
	script is used now in several cases in GARLIC.

1998-02-25  Laurent Pautet  <pautet@scapin.enst.fr>

	* xe_utils.adb, xe_utils.ads: Add a new function GNAT_Style to
 	retrieve proper casing for a unit.

	* xe_stubs.adb: Use GNAT_Style for filtering unit.

1998-02-19  Laurent Pautet  <pautet@scapin.enst.fr>

	* Makefile.am, Makefile.in: gnatdist is no longer a script. Use
	$(EXEEXT) to build a platform independent executable.
	
	* gnatdist.in: No longer needed.

	* xe_utils.adb: Add GARLIC flags directly in Ada code rather than
	in gnatdist script (-I${GARLIC}, -L${GARLIC}, -lgarlic).

1998-02-19  Samuel Tardieu  <sam@inf.enst.fr>

	* xe_utils.ads: Fix capitalization of OS_Lib.

	* xe_check.adb: Likewise.

	* xe_utils.adb: Likewise.

1998-02-19  Laurent Pautet  <pautet@scapin.enst.fr>

	* xe_stubs.adb: Use Exe_Suffix to build executable.

	* xe_utils.adb, xe_utils.ads: Add Obj_Suffix and Exe_Suffix.

1998-02-17  Laurent Pautet  <pautet@scapin.enst.fr>

	* xe_check.adb: Add units already configured on partition type
	(default_partition) to every partition.

	* xe_back.adb: New procedure Show_Partition (extracted from
 	Show_Configuration).

1998-02-16  Laurent Pautet  <pautet@scapin.enst.fr>

	* xe_back.adb: Declare Default_Partition as a normal
 	partition. This way it is properly initialized.

	* xe_parse.adb: A declared subprogram ('Main) can be the main
 	procedure of the distributed application. Declare it twice
	caused gnatdist to yell.

1998-02-16  Samuel Tardieu  <sam@inf.enst.fr>

	* xe_build.adb: Remove useless with clauses.

	* xe_check.adb: Likewise.
